# malphas

./: .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CONTRIBUTING.md  RELEASE_NOTES_3_0_0.md  ROADMAP_2_9_0.md  ROADMAP_v2.7.5.md  SECURITY.md  build.sh  build_core.ps1  ci_status.txt  clean_all.ps1  copiador.ps1  jobs.json  run_28464402567.json  run_28464403202.json  runs.json
.agents/: AGENTS.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: android_build.yml  android_release.yml  build_release.yml  cargo_audit.yml  dependabot_auto_merge.yml  flutter_ci.yml  flutter_lint.yml  flutter_windows_build.yml  pr_check.yml  release.yml  rust_ci.yml  (+1 more)
android_logs/: 0_Build Android native libraries.txt
docs/: FFI_CONTRACT.md  ROADMAP_3_0_0.md  SECURITY.md
flutter_app/: .gitignore  README.md  malphas_core.dll.sig  pubspec.yaml
malphas_cli/: Cargo.toml
malphas_cli/src/: bindings_codegen.rs  compiler.rs  dev_tools.rs  environment.rs  main.rs  manifest.rs  payload_schema.rs  wordlist.rs
malphas_core/: Cargo.toml
malphas_core/src/: arena_layout.rs  bridge.rs  crypto.rs  input.rs  integrity_policy.rs  lib.rs  memory_budget.rs  msp_loader.rs  payload_schema.rs  pipeline.rs  system_host.rs  vm.rs
malphas_core/tests/: integration_test.rs  security_tests.rs
scripts/: check_version_sync.sh  clean_repo.ps1  sign_engine.ps1  sign_engine.sh  squad7_grep_audit.sh  sync_version.sh
(+80 files in other folders)
