[package]
name = "malphas_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "malphas-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.28", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.134"
sha2 = "=0.10.8"
hex = "=0.4.3"
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand_core = { version = "=0.6.4", features = ["getrandom"] }
fontdue = "=0.9.2"
