[package]
name = "malphas_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "malphas_core"
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.8"
zip = "0.6.6"
arc-swap = "1.7.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex = "0.4.3"
